# multipass

./: .gitignore  .pre-commit-config.yaml  CRYPTOGRAPHIC_SECURITY_PLAN.md  Cargo.toml  ROADMAP.md  multipass.db  sorcerer.porpoise-alkaline.ts.net.crt  sorcerer.porpoise-alkaline.ts.net.key  test_endpoints.sh
.github/workflows/: coverage.yml  release.yml
src/: auth.rs  auth_helpers.rs  challenge.rs  crypto.rs  error.rs  integration_tests.rs  main.rs  middleware.rs  session.rs  storage.rs  storage_tests.rs  types.rs  zero_knowledge.rs
src/entities/: credential.rs  file.rs  file_version.rs  mod.rs  user.rs  zero_knowledge_data.rs
src/migration/: m20241201_000001_create_initial_tables.rs  mod.rs
static/: app.js  auth.js  editor.html  files.html  files_backup.html  index.html  login.html  secure_crypto.js  test_runner.html  ui.js  zero_knowledge.js
