[package]
name = "multipass"
version = "0.1.0"
edition = "2024"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors"] }

# WebAuthn / Passkey support
webauthn-rs = "0.5"
webauthn-rs-proto = "0.5"

# Encryption
aes-gcm = "0.10"
chacha20poly1305 = "0.10"
argon2 = "0.5"
rand = "0.8"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database with SeaORM
sea-orm = { version = "1.1", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros", "debug-print"] }
sea-orm-migration = "1.1"

# Other utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
base64 = "0.21"
anyhow = "1.0"
thiserror = "1.0"
url = "2.4"
bincode = "1.3"
chrono = { version = "0.4", features = ["serde"] }
urlencoding = "2.1"
md5 = "0.7"
clap = { version = "4.0", features = ["derive"] }
axum-server = { version = "0.7", features = ["tls-rustls"] }
rustls-pemfile = "2.0"
rustls = { version = "0.23", features = ["aws_lc_rs"] }
